--- a/dumb-web-app.cabal
+++ b/dumb-web-app.cabal
@@ -19,7 +19,10 @@ Executable dumb-web-app
     bytestring                >= 0.9.1 && < 0.11,
     mtl                       >= 2     && < 3,
     snap-core                 >= 1.0   && < 1.1,
-    snap-server               >= 1.0   && < 1.1
+    snap-server               >= 1.0   && < 1.1,
+    lens,
+    text,
+    snap
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
